--- a/BloodBuddy/src/main/webapp/search.html
+++ b/BloodBuddy/src/main/webapp/search.html
@@ -95,8 +95,24 @@
         <option value="AB-">AB-</option>
       </select>
 
-      <label for="location">Location:</label>
-      <input type="text" id="location" name="location" placeholder="Enter location" required>
+      <label for="location">HCL Office Location:</label>
+<select id="location" name="location" required>
+  <option value="">-- Select Location --</option>
+  <option value="Bengaluru">Bengaluru</option>
+  <option value="Chennai">Chennai</option>
+  <option value="Noida">Noida</option>
+  <option value="Hyderabad">Hyderabad</option>
+  <option value="Pune">Pune</option>
+  <option value="Kolkata">Kolkata</option>
+  <option value="Nagpur">Nagpur</option>
+  <option value="Lucknow">Lucknow</option>
+  <option value="Gurgaon">Gurgaon</option>
+  <option value="Madurai">Madurai</option>
+  <option value="Coimbatore">Coimbatore</option>
+  <option value="Thiruvananthapuram">Thiruvananthapuram</option>
+  <option value="Vijayawada">Vijayawada</option>
+</select>
+
 
       <button type="submit">Search</button>
     </form>
