--- a/BloodBuddy/src/main/webapp/search.html
+++ b/BloodBuddy/src/main/webapp/search.html
@@ -20,7 +20,7 @@
       max-width: 550px;
       width: 90%;
       padding: 50px 40px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.8);
       border-radius: 12px;
     }
 
@@ -48,7 +48,7 @@
 
     button {
       background-color: #cc0000;
-      color: white;
+      color:white;
       font-weight: bold;
       border: none;
       cursor: pointer;
